<resources>
    <string name="app_name">Projeto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="search_hint">Pesquisar título</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_play">Play</string>
    <string name="categoria_em_alta">EM ALTA</string>
    <string name="categoria_favoritos">FAVORITOS</string>
    <string name="categoria_lancamentos">LANÇAMENTOS</string>
    <string name="sobre_filme">SOBRE</string>
    <string name="musicas_filme">MÚSICAS</string>
    <string name="inicio">Início</string>
    <string name="acao">Ação</string>
    <string name="comedia">Comédia</string>
    <string name="guerra">Guerra</string>
    <string name="terror">Terror</string>
    <string name="ficcao">Ficção científica</string>
    <string name="romance">Romance</string>
    <string name="fantasia">Fantasia</string>
    <string name="drama">Drama</string>
    <string name="nav_about_us">Sobre</string>
    <string name="nav_item_politica">Política de Privacidade</string>
    <string name="nav_item_sobre">Sobre</string>
    <string name="descricao">Descrição</string>
    <string name="generos">Gêneros</string>
    <string name="favorito">Favorito</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="sem_conexao">Sem conexão</string>
    <string name="trailer">Trailer</string>
    <string name="about_dialog_text"><![CDATA[ <b>Aplicativo de Trilhas Sonoras</b><br> Versao %s<br><br> ]]></string>
    <string name="share_intent_text"><![CDATA[ Confira a trilha sonora de %s, no <b>Aplicativo de Trilhas Sonoras</b>]]></string>
    <string name="about_dialog_title">Sobre</string>
    <string name="about_github_link">https://github.com/ProjetosIFPE/pdm</string>
    <string name="youtube_link">http://www.youtube.com/watch?v=%s</string>
    <string name="ok">Ok</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="videos">Videos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filme_adicionado_em_favoritos">Filme adicionado aos favoritos</string>
    <string name="filme_removido_dos_favoritos">Filme removido dos favoritos</string>
    <string name="categorias">Categorias</string>
</resources>
